fixed spacing for loading spinner

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -41,3 +41,11 @@ body {
     position: relative;
     padding-bottom: 10%;
 }
+
+.loading-spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -100px;
+}
